Turned off database logging

--- a/tv/src/main/AndroidManifest.xml
+++ b/tv/src/main/AndroidManifest.xml
@@ -58,7 +58,7 @@
             android:value="1"/>
         <meta-data
             android:name="QUERY_LOG"
-            android:value="true"/>
+            android:value="false"/>
         <meta-data
             android:name="DOMAIN_PACKAGE_NAME"
             android:value="com.jerrellmardis.amphitheatre"/>
