--- a/tv/build.gradle
+++ b/tv/build.gradle
@@ -30,19 +30,15 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    // You must install or update the Support Repository through the SDK manager to use this dependency.
-    // You must install or update the Support Repository through the SDK manager to use this dependency.
-    // You must install or update the Support Repository through the SDK manager to use this dependency.
-    compile 'com.android.support:recyclerview-v7:+'
-    // You must install or update the Support Repository through the SDK manager to use this dependency.
-    compile 'com.android.support:leanback-v17:+'
-    compile 'com.android.support:appcompat-v7:+'
-    compile 'com.squareup.picasso:picasso:+'
-    compile 'com.squareup.retrofit:retrofit:+'
-    compile 'com.google.code.gson:gson:+'
-    compile 'org.apache.commons:commons-lang3:+'
-    compile 'org.apache.commons:commons-collections4:+'
+    compile 'com.android.support:recyclerview-v7:21.0.0-rc1'
+    compile 'com.android.support:leanback-v17:21.0.0-rc1'
+    compile 'com.android.support:appcompat-v7:21.0.0-rc1'
+    compile 'com.squareup.picasso:picasso:2.3.2'
+    compile 'com.squareup.retrofit:retrofit:1.6.1'
+    compile 'com.google.code.gson:gson:2.2.4'
+    compile 'org.apache.commons:commons-lang3:3.3.2'
+    compile 'org.apache.commons:commons-collections4:4.0'
     compile 'com.github.satyan:sugar:1.3'
-    compile 'com.jakewharton:butterknife:+'
-    compile 'com.github.castorflex.smoothprogressbar:library:+'
+    compile 'com.jakewharton:butterknife:5.1.2'
+    compile 'com.github.castorflex.smoothprogressbar:library:0.5.2'
 }
