Alter applicationId for debug builds.
This allows both release and debug builds to be installed side-by-side.

--- a/tv/build.gradle
+++ b/tv/build.gradle
@@ -14,6 +14,10 @@ android {
     }
 
     buildTypes {
+        debug {
+            applicationIdSuffix '.dev'
+            versionNameSuffix '-dev'
+        }
         release {
             runProguard false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
