Squashed commit of the following:
commit f37f8a150a701ad48f9f401a874aaede01e904eb
Merge: 8cc14a3 a343ceb
Author: Jerrell Mardis <jerrell.mardis@gmail.com>
Date:   Sat Aug 9 13:05:46 2014 -0500

    Merge branch 'feature/tv_shows' into develop

commit a343cebd0ed60a10bda7d34b76239dedf55be63b
Author: Jerrell Mardis <jerrell.mardis@gmail.com>
Date:   Sat Aug 9 13:05:06 2014 -0500

    Switched back to Sugar

    Sugar has proven to be a bit faster. Also added ratings to the default cards and screenshots of the app.

commit 4ac78e16c751d497d8279856790a1cdfd9c1768c
Author: Jerrell Mardis <jerrell.mardis@gmail.com>
Date:   Sat Aug 9 10:38:16 2014 -0500

    Code cleanup

    Removed model objects that weren't being used or persisted. Flattened genres and production company objects for easy storage and retrieval.

commit e9e6d4ce936f6fa0b4a3a4f7f4c92190fc4e3a0b
Author: Jerrell Mardis <jerrell.mardis@gmail.com>
Date:   Fri Aug 8 23:34:25 2014 -0500

    Added TV Show feature

    Added TV Show support. Cleaned up a lot of the model objects and added a few to support adding TV Shows. Switched from Sugar ORM to ActiveAndroid. ActiveAndroid seems ta bit more stable and robost. Fixed a couple bug throughout the app that found while testing.

--- a/tv/src/main/AndroidManifest.xml
+++ b/tv/src/main/AndroidManifest.xml
@@ -15,8 +15,8 @@
    limitations under the License.
 -->
 
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.jerrellmardis.amphitheatre">
+<manifest package="com.jerrellmardis.amphitheatre"
+          xmlns:android="http://schemas.android.com/apk/res/android">
 
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.RECORD_AUDIO"/>
@@ -26,11 +26,11 @@
         android:required="false"/>
 
     <application
+        android:name="com.orm.SugarApp"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme"
-        android:name="com.orm.SugarApp">
+        android:theme="@style/AppTheme">
 
         <activity
             android:name=".activity.MainActivity"
@@ -53,12 +53,15 @@
         <meta-data
             android:name="DATABASE"
             android:value="amphitheatre.db"/>
+
         <meta-data
             android:name="VERSION"
             android:value="1"/>
+
         <meta-data
             android:name="QUERY_LOG"
             android:value="false"/>
+
         <meta-data
             android:name="DOMAIN_PACKAGE_NAME"
             android:value="com.jerrellmardis.amphitheatre"/>
