--- a/tv/src/main/AndroidManifest.xml
+++ b/tv/src/main/AndroidManifest.xml
@@ -15,11 +15,13 @@
    limitations under the License.
 -->
 
-<manifest package="com.jerrellmardis.amphitheatre"
-          xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest
+    package="com.jerrellmardis.amphitheatre"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.RECORD_AUDIO"/>
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
 
     <uses-feature
         android:name="android.hardware.touchscreen"
@@ -49,6 +51,19 @@
         <activity android:name=".activity.DetailsActivity"/>
 
         <activity android:name=".activity.SearchActivity"/>
+
+        <receiver
+            android:name=".activity.BootupActivity"
+            android:enabled="true"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED"/>
+            </intent-filter>
+        </receiver>
+
+        <service
+            android:name=".service.RecommendationsService"
+            android:enabled="true"/>
 
         <meta-data
             android:name="DATABASE"
