--- a/tv/build.gradle
+++ b/tv/build.gradle
@@ -14,6 +14,7 @@ android {
         targetSdkVersion 'L'
         versionCode 1
         versionName "1.0"
+        renderscriptTargetApi 19
 
         buildConfigField "String", "TMDB_API_KEY", "\"${loadSecret("TMDB_API_KEY")}\""
     }
