--- a/tv/src/main/AndroidManifest.xml
+++ b/tv/src/main/AndroidManifest.xml
@@ -34,7 +34,11 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
 
-        <activity android:name=".activity.BrowseActivity">
+        <activity
+            android:name=".activity.BrowseActivity"
+            android:label="@string/app_name"
+            android:logo="@drawable/app_icon_banner"
+            android:screenOrientation="landscape">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
@@ -61,8 +65,8 @@
 
         <service
             android:name=".service.UpdateLibraryJob"
-            android:permission="android.permission.BIND_JOB_SERVICE"
-            android:enabled="true"/>
+            android:enabled="true"
+            android:permission="android.permission.BIND_JOB_SERVICE"/>
 
         <meta-data
             android:name="DATABASE"
