--- a/tv/build.gradle
+++ b/tv/build.gradle
@@ -52,6 +52,7 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:21.0.0-rc1'
     compile 'com.android.support:leanback-v17:21.0.0-rc1'
     compile 'com.android.support:appcompat-v7:21.0.0-rc1'
+    compile 'com.android.support:palette-v7:21.0.0-rc1'
     compile 'com.squareup.picasso:picasso:2.3.2'
     compile 'com.squareup.retrofit:retrofit:1.6.1'
     compile 'com.google.code.gson:gson:2.2.4'
