Fixed the library update logic
The JobScheduler code wasn't as reliable as it should, so I removed it. The LibraryUpdateService is now an IntentService that is triggered by and system Alarm.

--- a/tv/src/main/AndroidManifest.xml
+++ b/tv/src/main/AndroidManifest.xml
@@ -64,7 +64,7 @@
             android:enabled="true"/>
 
         <service
-            android:name=".service.UpdateLibraryJob"
+            android:name=".service.LibraryUpdateService"
             android:enabled="true"
             android:permission="android.permission.BIND_JOB_SERVICE"/>
 
