--- a/tv/build.gradle
+++ b/tv/build.gradle
@@ -5,13 +5,13 @@ def loadSecret(String name) {
 }
 
 android {
-    compileSdkVersion 'android-L'
-    buildToolsVersion "20.0.0"
+    compileSdkVersion 21
+    buildToolsVersion "21.0.1"
 
     defaultConfig {
         applicationId "com.jerrellmardis.amphitheatre"
-        minSdkVersion 'L'
-        targetSdkVersion 'L'
+        minSdkVersion 21
+        targetSdkVersion 21
         versionCode 1
         versionName "1.0"
         renderscriptTargetApi 19
@@ -49,10 +49,10 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:recyclerview-v7:21.0.0-rc1'
-    compile 'com.android.support:leanback-v17:21.0.0-rc1'
-    compile 'com.android.support:appcompat-v7:21.0.0-rc1'
-    compile 'com.android.support:palette-v7:21.0.0-rc1'
+    compile 'com.android.support:recyclerview-v7:21.0.0'
+    compile 'com.android.support:leanback-v17:21.0.0'
+    compile 'com.android.support:appcompat-v7:21.0.0'
+    compile 'com.android.support:palette-v7:21.0.0'
     compile 'com.squareup.picasso:picasso:2.3.2'
     compile 'com.squareup.retrofit:retrofit:1.6.1'
     compile 'com.google.code.gson:gson:2.2.4'
