--- a/tv/build.gradle
+++ b/tv/build.gradle
@@ -25,7 +25,7 @@ android {
             versionNameSuffix '-dev'
         }
         release {
-            runProguard false
+            minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
