--- a/tv/build.gradle
+++ b/tv/build.gradle
@@ -55,6 +55,7 @@ dependencies {
     compile 'com.android.support:palette-v7:21.0.0'
     compile 'com.squareup.picasso:picasso:2.3.4'
     compile 'com.squareup.retrofit:retrofit:1.7.1'
+    compile 'com.mobprofs:retrofit-simplexmlconverter:1.1'
     compile 'com.google.code.gson:gson:2.3'
     compile 'org.apache.commons:commons-lang3:3.3.2'
     compile 'org.apache.commons:commons-collections4:4.0'
