--- a/tv/build.gradle
+++ b/tv/build.gradle
@@ -55,10 +55,10 @@ dependencies {
     compile 'com.android.support:palette-v7:21.0.0'
     compile 'com.squareup.picasso:picasso:2.3.4'
     compile 'com.squareup.retrofit:retrofit:1.8.0'
-    compile 'com.mobprofs:retrofit-simplexmlconverter:1.1'
     compile 'com.google.code.gson:gson:2.3'
     compile 'org.apache.commons:commons-lang3:3.3.2'
     compile 'org.apache.commons:commons-collections4:4.0'
     compile 'com.jakewharton:butterknife:6.0.0'
     compile 'com.github.satyan:sugar:1.3'
+    compile 'com.squareup.retrofit:converter-simplexml:1.8.0'
 }
