--- a/tv/build.gradle
+++ b/tv/build.gradle
@@ -17,6 +17,7 @@ android {
         renderscriptTargetApi 19
 
         buildConfigField "String", "TMDB_API_KEY", "\"${loadSecret("TMDB_API_KEY")}\""
+        buildConfigField "String", "TVDB_API_KEY", "\"${loadSecret("TVDB_API_KEY")}\""
     }
 
     buildTypes {
@@ -60,5 +61,7 @@ dependencies {
     compile 'org.apache.commons:commons-collections4:4.0'
     compile 'com.jakewharton:butterknife:6.0.0'
     compile 'com.github.satyan:sugar:1.3'
-    compile 'com.squareup.retrofit:converter-simplexml:1.8.0'
+    compile ('com.squareup.retrofit:converter-simplexml:1.8.0') {
+        exclude group: 'xpp3', module: 'xpp3'
+    }
 }
