--- a/tv/build.gradle
+++ b/tv/build.gradle
@@ -66,7 +66,7 @@ dependencies {
     compile 'com.jakewharton:butterknife:6.0.0'
     compile 'com.github.satyan:sugar:1.3'
     compile ('com.squareup.retrofit:converter-simplexml:1.8.0') {
-        //Exclude these otherwise the conflict with simplexml classes shipped with core
+        //Exclude these otherwise they conflict with some classes shipped with core
         exclude group: 'xpp3', module: 'xpp3'
         exclude group: 'stax', module: 'stax-api'
     }
